[gd_scene load_steps=16 format=2]

[ext_resource path="res://Assets/Sprites/Player.png" type="Texture" id=1]
[ext_resource path="res://Scripts/Player.gd" type="Script" id=2]
[ext_resource path="res://Assets/Sprites/Player2.png" type="Texture" id=3]
[ext_resource path="res://Assets/Sprites/PlayerMelee4.png" type="Texture" id=4]
[ext_resource path="res://Assets/Sprites/PlayerMelee1.png" type="Texture" id=5]
[ext_resource path="res://Assets/Sprites/PlayerMelee2.png" type="Texture" id=6]
[ext_resource path="res://Assets/Sprites/PlayerMelee3.png" type="Texture" id=7]
[ext_resource path="res://Assets/Sprites/PlayerMelee5.png" type="Texture" id=8]
[ext_resource path="res://Assets/Sprites/PlayerMelee6.png" type="Texture" id=9]
[ext_resource path="res://Assets/Sprites/PlayerDead.png" type="Texture" id=10]
[ext_resource path="res://Shaders/Hurt.tres" type="Material" id=11]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 10 ) ],
"loop": true,
"name": "dead",
"speed": 5.0
}, {
"frames": [ ExtResource( 3 ) ],
"loop": true,
"name": "default",
"speed": 5.0
}, {
"frames": [ ExtResource( 1 ), ExtResource( 3 ) ],
"loop": true,
"name": "walk",
"speed": 15.0
} ]

[sub_resource type="CircleShape2D" id=2]

[sub_resource type="SpriteFrames" id=4]
animations = [ {
"frames": [  ],
"loop": true,
"name": "default",
"speed": 5.0
}, {
"frames": [ ExtResource( 5 ), ExtResource( 6 ), ExtResource( 7 ), ExtResource( 7 ), ExtResource( 4 ), ExtResource( 8 ), ExtResource( 9 ) ],
"loop": false,
"name": "swing",
"speed": 45.0
} ]

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 38, 70 )

[node name="Player" type="Area2D"]
script = ExtResource( 2 )
__meta__ = {
"_edit_group_": true
}

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
material = ExtResource( 11 )
position = Vector2( 2.99999, 5.5 )
scale = Vector2( 0.25, 0.25 )
z_index = 2
frames = SubResource( 1 )

[node name="Hitbox" type="CollisionShape2D" parent="."]
scale = Vector2( 4, 4 )
shape = SubResource( 2 )

[node name="HeldItemContainer" type="Node2D" parent="."]

[node name="HeldItem" type="Node2D" parent="HeldItemContainer"]
position = Vector2( 45, 0 )

[node name="Melee" type="Area2D" parent="HeldItemContainer/HeldItem"]
collision_mask = 0

[node name="MeleeSprite" type="AnimatedSprite" parent="HeldItemContainer/HeldItem/Melee"]
position = Vector2( 15, 0 )
scale = Vector2( 0.4, 0.4 )
frames = SubResource( 4 )
animation = "swing"
frame = 6
playing = true

[node name="SwordHitbox" type="CollisionShape2D" parent="HeldItemContainer/HeldItem/Melee"]
position = Vector2( 15, -1.19209e-07 )
shape = SubResource( 3 )

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
pause_mode = 2

[connection signal="area_entered" from="." to="." method="_on_Player_area_entered"]
[connection signal="body_shape_entered" from="." to="." method="_on_Player_body_shape_entered"]
[connection signal="animation_finished" from="HeldItemContainer/HeldItem/Melee/MeleeSprite" to="." method="_on_Melee_animation_finished"]
